UX: Fix topic link color in dark mode (#4)
Dark blue link color is not very readable on dark backgrounds

This commit changes topic list links to light blue on dark schemes.

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -7,7 +7,7 @@
 }
 
 .topic-list a.title:not(.badge-notification) {
-  color: #3b5998;
+  color: var(--simple-theme-link-color);
   font-weight: normal;
   font-family: "Helvetica Neue", Helvetica, Arial, Utkal, sans-serif;
   font-size: 18px;
